--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--will always have a main located at this file structure, all other template files go outside of layout folder-->
 <html lang="en">
 
 <head>
@@ -15,10 +14,13 @@
       <h1>
         <a href="/">Just Tech News</a>
       </h1>
-       <nav>
-          <button id="logout" class="btn-no-style">logout</button>
-          <a href="/login">login</a>
-        </nav>
+      <nav>
+        {{#if loggedIn}}
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
     </header>
     <main>
       {{{ body }}}
@@ -27,7 +29,10 @@
       Thanks for visiting!
     </footer>
   </div>
+  
+  {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
