--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,14 @@
       <h1>
         <a href="/">Just Tech News</a>
       </h1>
-       <nav>
-          <button id="logout" class="btn-no-style">logout</button>
-          <a href="/login">login</a>
-        </nav>
+      <nav>
+        {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
     </header>
     <main>
       {{{ body }}}
@@ -27,7 +31,10 @@
       Thanks for visiting!
     </footer>
   </div>
+  
+  {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
